# SwitchKnights

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
src/switchknights/: SwitchKnights.py  switch_knights.py
