[project]
name = "SwitchKnights"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matthias Telöken", email = "matthias.teloeken@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
