[project]
name = "SwitchKnights"
version = "0.1.0"
description = "Programming puzzle: Switch black and white knights on a 9x9 chessboard."
authors = [
    {name = "Matthias Telöken", email = "matthias.teloeken@posteo.de"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switchknights"]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ANN",  # mypy
    "ARG",  # flake8-unused-arguments
    "B",  # Bugbear
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "E",  # pycodestyle
    "F",  # Pyflakes
    "FLY",  # flynt
    "FA",  # flake8-fututre-annotations
    "I",  # isort
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",  # pycodestyle
    "C90",  # mccabe
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
switchknights = { workspace = true }

[project.scripts]
switchknights = "switchknights.switch_knights:main"
